[package]
name = "firewall_cloudflare_executor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

reqwest = { version="0.11.10", default-features=false, features = ["json","rustls-tls"]}
actix-web = "4"
dotenv = "0.15.0"
log = "0.4"
tracing-actix-web = "0.5.1"
serde = {version = "1.0.137", features = ["derive"]}
serde_json = "1.0.81"
serde_derive = "1.0.137"
strum_macros = "0.24.0"
pepe-config = "0.0.2"
config = "0.12.0"
pepe-log = "0.0.7"
anyhow = "1.0.57"
thiserror = "1.0.31"
futures = "0.3.21"
bb8-diesel = "0.2.1"
bb8-postgres = "0.8.0"
chrono = "0.4.19"

[dependencies.async-trait]
version = "0.1.24"

[dependencies.bb8]
version = "0.7"

[dependencies.diesel]
version = "1.4"
features = ["r2d2", "postgres", "chrono"]
default-features = false

[dependencies.tokio]
version = "1.0"
features = ["macros","rt-multi-thread"]
default-features = false

[dependencies.tracing]
version = "0.1.19"

[dependencies.tracing-subscriber]
version = "0.3.11"

[dev-dependencies.diesel]
version = "1.4"
features = ["postgres", "r2d2"]

[dev-dependencies.tokio]
version = "1.0"
features = ["macros"]

