[package]
name = "firewall_cloudflare_executor"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-http = "3.0.4"
anyhow = "1.0.57"
async-trait = "0.1.24"
chrono = "0.4.19"
diesel = { version = "1.4", features = ["postgres", "chrono", "r2d2"], default-features = false }
futures = "0.3.21"
pepe-config = "0.0.7"
reqwest = { version = "0.11.10", default-features = false, features = ["json","rustls-tls"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_derive = "1.0.137"
serde_json = "1.0.81"
strum_macros = "0.24.0"
thiserror = "1.0.31"
tokio = { version = "1.0", features = ["macros","rt-multi-thread"], default-features = false }
tracing = "0.1.19"
tracing-actix-web = "0.5.1"
tracing-subscriber = { version = "0.3.11", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.2"
tracing-log = "0.1.3"
opentelemetry = { version = "0.17.0", features = ["rt-tokio"] }
opentelemetry-jaeger = { version = "0.16.0", features = ["rt-tokio"] }
tracing-opentelemetry = "0.17.2"

[[bin]]
name = "service"
path = "src/main.rs"
